trying to fix styling on mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -238,7 +238,7 @@ button{
         width: 45%;
         margin: 0% 27.5% 0% 27.5%;
         height: 20px;
-        top: 10%;
+        top: 15%;
         left: 0%;
     }
 
@@ -252,8 +252,8 @@ button{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     @media only screen and (max-width: 640px) {
         font-size: 10px;
-        top: -50%;
-        left: 22%;}
+        top: -45%;
+        left: 20%;}
 }
 
 
